--- a/src/function/table/system/CMakeLists.txt
+++ b/src/function/table/system/CMakeLists.txt
@@ -28,6 +28,7 @@ add_library_unity(
   duckdb_views.cpp
   pragma_collations.cpp
   pragma_database_size.cpp
+  pragma_table_size.cpp
   pragma_metadata_info.cpp
   pragma_storage_info.cpp
   pragma_table_info.cpp
